--- a/tools/package.json
+++ b/tools/package.json
@@ -60,11 +60,11 @@
         "esri-leaflet-geocoder": "^2.3.2",
         "flot": "^3.2.2",
         "gmaps": "^0.4.24",
-        "handlebars": "4.1.0",
+        "handlebars": "^4.7.6",
         "inputmask": "^4.0.6",
         "ion-rangeslider": "^2.3.1",
         "jkanban": "^1.2.1",
-        "jquery": "3.4.1",
+        "jquery": "^3.5.1",
         "jquery.repeater": "^1.2.1",
         "jqvmap": "^1.5.1",
         "jstree": "^3.3.9",
