- Restructure directory paths

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node -r dotenv/config ./build/app.bundle.js dotenv_config_path=./build/.env",
+    "start": "node -r dotenv/config ./.build/app.bundle.js dotenv_config_path=./build/.env",
     "build": "webpack --config webpack.server.js",
     "test": "jest --coverage"
   },
