- Change github Actions host machine type from Windows to Ubuntu

--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -11,7 +11,7 @@ on: [pull_request]
 jobs:
   label:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/labeler@v2
