--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-pg-simple": "^6.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
+    "csurf": "^1.11.0",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-handlebars": "^5.1.0",
+    "express-promise-router": "^4.0.1",
+    "express-session": "^1.17.1",
     "helmet": "^3.23.3",
-    "morgan": "~1.9.1"
+    "http-errors": "^1.8.0",
+    "morgan": "~1.9.1",
+    "mysql2": "^2.1.0",
+    "pg": "^8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.10.4",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
@@ -28,6 +36,7 @@
     "eslint": "^7.4.0",
     "jest": "^26.1.0",
     "jest-config": "^26.1.0",
+    "regenerator-runtime": "^0.13.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-node-externals": "^2.5.0"
