--- a/tools/package.json
+++ b/tools/package.json
@@ -64,6 +64,7 @@
         "ion-rangeslider": "^2.3.1",
         "jkanban": "^1.2.1",
         "jquery": "^3.5.1",
+        "jquery-form": "^4.3.0",
         "jquery.repeater": "^1.2.1",
         "jqvmap": "^1.5.1",
         "jstree": "^3.3.9",
