--- a/tools/package.json
+++ b/tools/package.json
@@ -1,6 +1,6 @@
 {
     "name": "metronic",
-    "version": "7.0.6",
+    "version": "7.0.8",
     "dependencies": {
         "@ckeditor/ckeditor5-alignment": "^11.2.0",
         "@ckeditor/ckeditor5-build-balloon": "^12.4.0",
@@ -32,6 +32,7 @@
         "bootstrap-maxlength": "^1.6.0",
         "bootstrap-notify": "^3.1.3",
         "bootstrap-select": "^1.13.12",
+        "bootstrap-switch": "3.3.4",
         "bootstrap-timepicker": "^0.5.2",
         "bootstrap-touchspin": "^4.2.5",
         "clipboard": "^2.0.4",
@@ -59,11 +60,11 @@
         "esri-leaflet-geocoder": "^2.3.2",
         "flot": "^3.2.2",
         "gmaps": "^0.4.24",
-        "handlebars": "^4.7.6",
+        "handlebars": "4.1.0",
         "inputmask": "^4.0.6",
         "ion-rangeslider": "^2.3.1",
         "jkanban": "^1.2.1",
-        "jquery": "^3.5.1",
+        "jquery": "3.4.1",
         "jquery-form": "^4.3.0",
         "jquery.repeater": "^1.2.1",
         "jqvmap": "^1.5.1",
@@ -75,7 +76,7 @@
         "moment": "^2.24.0",
         "morris.js": "^0.5.0",
         "nouislider": "^14.1.1",
-        "ol": "6.4.0",
+        "ol": "^6.4.3",
         "owl.carousel": "^2.2.0",
         "pace": "0.0.4",
         "pace-js": "^1.0.2",
@@ -122,6 +123,7 @@
         "node-sass": "^4.12.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "postcss-loader": "^3.0.0",
+        "pretty": "^2.0.0",
         "replace-in-file-webpack-plugin": "^1.0.6",
         "sass-loader": "^7.1.0",
         "script-loader": "^0.7.2",
@@ -139,6 +141,7 @@
         "yarn-install": "^1.0.0"
     },
     "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack",
         "watch": "webpack --watch",
         "sync": "webpack --config ./webpack.sync.config.js",
