--- a/tools/package.json
+++ b/tools/package.json
@@ -84,6 +84,7 @@
         "perfect-scrollbar": "^1.5.0",
         "popper.js": "^1.14.7",
         "prismjs": "^1.18.0",
+        "proj4": "^2.6.2",
         "quill": "^1.3.6",
         "raphael": "^2.2.7",
         "select2": "^4.0.12",
