--- a/tools/package.json
+++ b/tools/package.json
@@ -145,6 +145,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack",
+        "buildProduction": "webpack --mode=production",
         "watch": "webpack --watch",
         "sync": "webpack --config ./webpack.sync.config.js",
         "localhost": "node --max-old-space-size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --open"
