--- a/tools/package.json
+++ b/tools/package.json
@@ -2,7 +2,6 @@
     "name": "metronic",
     "version": "7.0.9",
     "description": "Packages used by yarn, npm, gulp and webpack",
-    "main": "gulpfile.js",
     "dependencies": {
         "@ckeditor/ckeditor5-alignment": "^11.2.0",
         "@ckeditor/ckeditor5-build-balloon": "^12.4.0",
@@ -63,11 +62,12 @@
         "esri-leaflet-geocoder": "^2.3.2",
         "flot": "^3.2.2",
         "gmaps": "^0.4.24",
-        "handlebars": "4.1.0",
+        "handlebars": "^4.7.6",
         "inputmask": "^4.0.6",
         "ion-rangeslider": "^2.3.1",
         "jkanban": "^1.2.1",
-        "jquery": "3.4.1",
+        "jquery": "^3.5.1",
+        "jquery-form": "^4.3.0",
         "jquery-mask-plugin": "^1.14.16",
         "jquery.repeater": "^1.2.1",
         "jqvmap": "^1.5.1",
@@ -79,6 +79,7 @@
         "moment": "^2.24.0",
         "morris.js": "^0.5.0",
         "nouislider": "^14.1.1",
+        "ol": "^6.4.3",
         "owl.carousel": "^2.2.0",
         "pace": "0.0.4",
         "pace-js": "^1.0.2",
@@ -86,6 +87,7 @@
         "perfect-scrollbar": "^1.5.0",
         "popper.js": "^1.14.7",
         "prismjs": "^1.18.0",
+        "proj4": "^2.6.2",
         "quill": "^1.3.6",
         "raphael": "^2.2.7",
         "select2": "^4.0.12",
@@ -106,25 +108,17 @@
         "wnumb": "^1.1.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.11.4",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/preset-env": "^7.11.0",
+        "autoprefixer": "^9.8.6",
+        "babel-loader": "^8.1.0",
         "copy-webpack-plugin": "^5.0.2",
         "css-loader": "^2.1.1",
         "del": "^3.0.0",
         "extract-loader": "^3.1.0",
         "file-loader": "^3.0.1",
-        "gulp": "^4.0.2",
-        "gulp-autoprefixer": "^6.0.0",
-        "gulp-clean-css": "^4.2.0",
-        "gulp-concat": "^2.6.1",
-        "gulp-connect": "^5.6.1",
-        "gulp-filter": "^5.0.1",
-        "gulp-if": "^2.0.2",
-        "gulp-rename": "^1.3.0",
-        "gulp-replace": "^1.0.0",
-        "gulp-rewrite-css": "^1.1.0",
-        "gulp-rtlcss": "^1.2.0",
-        "gulp-sass": "^4.1.0",
-        "gulp-sourcemaps": "^2.6.0",
-        "gulp-uglify-es": "^1.0.1",
+        "glob": "^7.1.6",
         "imports-loader": "^0.8.0",
         "lazypipe": "^1.0.2",
         "merge-stream": "^1.0.1",
@@ -145,12 +139,14 @@
         "webpack-merge-and-include-globally": "^2.1.25",
         "webpack-messages": "^2.0.4",
         "webpack-rtl-plugin": "^2.0.0",
+        "worker-loader": "^3.0.1",
         "yargs": "^12.0.5",
         "yarn-install": "^1.0.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack",
+        "buildProduction": "webpack --mode=production",
         "watch": "webpack --watch",
         "sync": "webpack --config ./webpack.sync.config.js",
         "localhost": "node --max-old-space-size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --open"
