--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.1",
     "helmet": "^3.23.3",
     "http-errors": "^1.8.0",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
