--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/dataSources.xml
 
 # Generated files
 .idea/**/contentModel.xml
