--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "start": "node -r dotenv/config ./.build/app.bundle.js dotenv_config_path=./build/.env",
     "buildServer": "webpack --config webpack.server.js",
+    "prodBuild": "webpack --mode production --config webpack.server.js",
     "test": "jest --coverage"
   },
   "dependencies": {
