--- a/package.json
+++ b/package.json
@@ -2,48 +2,48 @@
   "private": true,
   "scripts": {
     "start": "node -r dotenv/config ./.build/app.bundle.js dotenv_config_path=./build/.env",
-    "buildServer": "webpack --config webpack.server.js",
-    "prodBuild": "webpack --mode production --config webpack.server.js",
+    "buildServer": "webpack --config ./webpack.server.js",
+    "prodBuild": "webpack --mode production --config ./webpack.server.js",
     "test": "jest --coverage"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "connect-pg-simple": "^6.1.0",
-    "cookie-parser": "~1.4.4",
+    "connect-pg-simple": "^6.2.1",
+    "cookie-parser": "~1.4.5",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
-    "debug": "^4.1.1",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "express-handlebars": "^5.1.0",
+    "express": "~4.17.1",
+    "express-handlebars": "^5.2.0",
     "express-promise-router": "^4.0.1",
     "express-session": "^1.17.1",
-    "helmet": "^3.23.3",
+    "helmet": "^4.2.0",
     "http-errors": "^1.8.0",
     "moment": "^2.29.1",
-    "morgan": "~1.9.1",
-    "mysql2": "^2.1.0",
+    "morgan": "~1.10.0",
+    "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.3.0",
-    "rate-limiter-flexible": "^2.1.10"
+    "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.1.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.10.4",
-    "babel-jest": "^26.1.0",
-    "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "eslint": "^7.4.0",
-    "jest": "^26.1.0",
-    "jest-config": "^26.1.0",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^6.3.1",
+    "eslint": "^7.14.0",
+    "jest": "^26.6.3",
+    "jest-config": "^26.6.3",
     "merge-jsons-webpack-plugin": "^1.0.21",
     "regenerator-runtime": "^0.13.7",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-node-externals": "^2.5.0"
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
