--- a/tools/package.json
+++ b/tools/package.json
@@ -108,39 +108,40 @@
     "wnumb": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^5.0.2",
-    "css-loader": "^2.1.1",
-    "del": "^3.0.0",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^3.0.1",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "autoprefixer": "^10.0.4",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^6.3.1",
+    "css-loader": "^5.0.1",
+    "del": "^6.0.0",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
     "glob": "^7.1.6",
-    "imports-loader": "^0.8.0",
+    "imports-loader": "^1.2.0",
     "lazypipe": "^1.0.2",
-    "merge-stream": "^1.0.1",
-    "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
+    "merge-stream": "^2.0.0",
+    "mini-css-extract-plugin": "^1.3.1",
+    "node-sass": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^8.1.10",
+    "postcss-loader": "^4.0.4",
     "pretty": "^2.0.0",
     "replace-in-file-webpack-plugin": "^1.0.6",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^10.1.0",
     "script-loader": "^0.7.2",
-    "terser-webpack-plugin": "^1.3.0",
-    "url-loader": "^2.0.1",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.7.2",
+    "terser-webpack-plugin": "^5.0.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-exclude-assets-plugin": "^0.1.1",
-    "webpack-merge-and-include-globally": "^2.1.25",
+    "webpack-merge-and-include-globally": "^2.1.26",
     "webpack-messages": "^2.0.4",
     "webpack-rtl-plugin": "^2.0.0",
-    "worker-loader": "^3.0.1",
-    "yargs": "^12.0.5",
+    "worker-loader": "^3.0.5",
+    "yargs": "^16.1.1",
     "yarn-install": "^1.0.0"
   },
   "scripts": {
