--- a/tools/package.json
+++ b/tools/package.json
@@ -35,6 +35,7 @@
     "inputmask": "^4.0.6",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
+    "jquery-contextmenu": "^2.9.2",
     "jquery-form": "^4.3.0",
     "jquery-mask-plugin": "^1.14.16",
     "jquery.repeater": "^1.2.1",
