--- a/tools/package.json
+++ b/tools/package.json
@@ -38,6 +38,7 @@
     "jquery-contextmenu": "^2.9.2",
     "jquery-form": "^4.3.0",
     "jquery-mask-plugin": "^1.14.16",
+    "jquery-ui": "^1.12.1",
     "jquery.repeater": "^1.2.1",
     "jszip": "^3.2.2",
     "line-awesome": "^1.3.0",
@@ -63,7 +64,8 @@
     "underscore": "^1.8.3",
     "waypoints": "^4.0.1",
     "whatwg-fetch": "^3.0.0",
-    "wnumb": "^1.1.0"
+    "wnumb": "^1.1.0",
+    "yadcf": "^0.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
