--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "name": "webgis",
   "private": true,
   "scripts": {
     "start": "node -r dotenv/config ./.build/app.bundle.js dotenv_config_path=./build/.env",
     "buildServer": "webpack --config ./webpack.server.js",
     "prodBuild": "webpack --mode production --config ./webpack.server.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "ncu(devDependencies)": "ncu --dep dev"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -30,19 +32,19 @@
     "rate-limiter-flexible": "^2.1.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^6.3.1",
-    "eslint": "^7.14.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "eslint": "^7.15.0",
     "jest": "^26.6.3",
     "jest-config": "^26.6.3",
     "merge-jsons-webpack-plugin": "^1.0.21",
     "regenerator-runtime": "^0.13.7",
-    "webpack": "^5.4.0",
+    "webpack": "^5.10.2",
     "webpack-cli": "^4.2.0",
     "webpack-node-externals": "^2.5.2"
   }
