--- a/tools/package.json
+++ b/tools/package.json
@@ -68,12 +68,12 @@
     "yadcf": "^0.9.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "autoprefixer": "^10.0.4",
+    "@babel/preset-env": "^7.12.10",
+    "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^6.3.1",
+    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "del": "^6.0.0",
     "extract-loader": "^5.1.0",
@@ -82,11 +82,11 @@
     "imports-loader": "^1.2.0",
     "lazypipe": "^1.0.2",
     "merge-stream": "^2.0.0",
-    "mini-css-extract-plugin": "^1.3.1",
+    "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "^8.1.10",
-    "postcss-loader": "^4.0.4",
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
     "pretty": "^2.0.0",
     "replace-in-file-webpack-plugin": "^1.0.6",
     "sass": "^1.30.0",
@@ -94,15 +94,15 @@
     "script-loader": "^0.7.2",
     "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
-    "webpack": "^5.4.0",
+    "webpack": "^5.10.2",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-exclude-assets-plugin": "^0.1.1",
     "webpack-merge-and-include-globally": "^2.1.26",
     "webpack-messages": "^2.0.4",
     "webpack-rtl-plugin": "^2.0.0",
-    "worker-loader": "^3.0.5",
-    "yargs": "^16.1.1",
+    "worker-loader": "^3.0.6",
+    "yargs": "^16.2.0",
     "yarn-install": "^1.0.0"
   },
   "scripts": {
@@ -110,9 +110,11 @@
     "buildProduction": "webpack --mode=production",
     "watch": "webpack --watch",
     "sync": "webpack --config ./webpack.sync.config.js",
-    "localhost": "node --max-old-space-size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --open"
+    "localhost": "node --max-old-space-size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --open",
+    "ncu(devDependencies)": "ncu --dep dev"
   },
   "author": "Keenthemes",
   "license": "ISC",
-  "homepage": "https://keenthemes.com/"
+  "homepage": "https://keenthemes.com/",
+  "private": true
 }
