--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "node -r dotenv/config ./.build/app.bundle.js dotenv_config_path=./build/.env",
-    "buildServer": "webpack --config ./webpack.server.js",
+    "buildServer": "webpack --watch --config ./webpack.server.js",
     "prodServer": "webpack --mode=production --config ./webpack.server.js",
     "test": "jest --coverage",
     "ncu(devDependencies)": "ncu --dep dev"
