--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/core": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/plugin-transform-strict-mode": "^7.12.13",
     "@babel/preset-env": "^7.13.10",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
