--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest-config": "^26.6.3",
     "merge-jsons-webpack-plugin": "^1.0.21",
     "regenerator-runtime": "^0.13.7",
+    "terser-webpack-plugin": "^5.1.3",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-node-externals": "^3.0.0"
