--- a/.gitignore
+++ b/.gitignore
@@ -246,16 +246,11 @@ temp/
 # https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored
 
 .yarn/*
+!.yarn/patches
 !.yarn/releases
 !.yarn/plugins
 !.yarn/sdks
 !.yarn/versions
-
-# if you are NOT using Zero-installs, then:
-# comment the following lines
-# !.yarn/cache
-
-# and uncomment the following lines
 .pnp.*
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,database,node,dotenv,yarn
@@ -264,8 +259,9 @@ temp/
 .resources/
 
 tools/.yarn/*
+!tools/.yarn/patches
 !tools/.yarn/releases
 !tools/.yarn/plugins
 !tools/.yarn/sdks
 !tools/.yarn/versions
-tools/.pnp.*
+.tools/pnp.*
