--- a/tools/package.json
+++ b/tools/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@shopify/draggable": "^1.0.0-beta.8",
+    "@uppy/core": "^1.19.2",
+    "@uppy/dashboard": "^1.20.2",
+    "@uppy/form": "^1.3.31",
+    "@uppy/image-editor": "^0.3.0",
+    "@uppy/xhr-upload": "^1.7.5",
     "acorn": "^8.0.4",
     "animate.css": "^4.1.1",
     "autosize": "^4.0.2",
@@ -59,6 +64,7 @@
     "tempusdominus-bootstrap-4": "^5.1.2",
     "typeahead.js": "^0.11.1",
     "underscore": "^1.12.1",
+    "uppy-plugin-image-compressor": "^1.1.0",
     "waypoints": "^4.0.1",
     "whatwg-fetch": "^3.6.2",
     "wnumb": "^1.1.0",
