--- a/.gitignore
+++ b/.gitignore
@@ -261,6 +261,7 @@ temp/
 tools/.yarn/*
 !tools/.yarn/patches
 !tools/.yarn/releases
+/tools/.yarn/releases/
 !tools/.yarn/plugins
 !tools/.yarn/sdks
 !tools/.yarn/versions
