--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "terser-webpack-plugin": "^5.2.3",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
+    "webpack-log": "^3.0.2",
     "webpack-node-externals": "^3.0.0"
   }
 }
