--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-node-externals": "^3.0.0"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
