--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express-handlebars": "^5.3.2",
     "express-promise-router": "^4.1.0",
     "express-session": "^1.17.2",
-    "formidable": "^1.2.2",
+    "formidable": "v2",
     "helmet": "^4.6.0",
     "http-errors": "^1.8.0",
     "moment": "^2.29.1",
