--- a/tools/package.json
+++ b/tools/package.json
@@ -14,13 +14,13 @@
     "animate.css": "^4.1.1",
     "autosize": "^4.0.2",
     "block-ui": "^2.70.1",
-    "bootstrap": "4.5.2",
+    "bootstrap": "4.6.1",
     "bootstrap-datepicker": "^1.9.0",
     "bootstrap-daterangepicker": "^3.0.5",
-    "bootstrap-maxlength": "^1.6.0",
+    "bootstrap-maxlength": "^1.10.1",
     "bootstrap-notify": "^3.1.3",
     "bootstrap-select": "^1.13.12",
-    "bootstrap-switch": "3.3.4",
+    "bootstrap-switch": "^3.4.0",
     "bootstrap-timepicker": "^0.5.2",
     "clipboard": "^2.0.4",
     "counterup": "^1.0.2",
@@ -55,51 +55,50 @@
     "pace": "0.0.4",
     "pace-js": "^1.0.2",
     "perfect-scrollbar": "^1.5.0",
-    "popper.js": "^1.14.7",
+    "popper.js": "^1.16.1",
     "proj4": "^2.7.5",
     "select2": "^4.0.12",
     "socicon": "^3.0.5",
     "sticky-js": "^1.2.0",
     "sweetalert2": "^9.10.12",
-    "tempusdominus-bootstrap-4": "^5.1.2",
+    "tempusdominus-bootstrap-4": "^5.39.0",
+    "tempusdominus-core": "^5.19.0",
     "typeahead.js": "^0.11.1",
     "underscore": "^1.12.1",
-    "uppy-plugin-image-compressor": "^1.1.0",
     "waypoints": "^4.0.1",
     "whatwg-fetch": "^3.6.2",
     "wnumb": "^1.1.0",
     "yadcf": "^0.9.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.1",
-    "copy-webpack-plugin": "^9.0.1",
+    "autoprefixer": "^10.4.1",
+    "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^5.2.6",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
-    "glob": "^7.1.7",
-    "imports-loader": "^3.0.0",
+    "glob": "^7.2.0",
+    "imports-loader": "^3.1.1",
     "merge-stream": "^2.0.0",
-    "mini-css-extract-plugin": "^2.1.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "postcss": "^8.3.5",
-    "postcss-loader": "^6.1.1",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
     "pretty": "^2.0.0",
     "replace-in-file-webpack-plugin": "^1.0.6",
-    "sass": "^1.35.2",
-    "sass-loader": "^12.1.0",
+    "sass": "^1.45.1",
+    "sass-loader": "^12.4.0",
     "script-loader": "^0.7.2",
-    "terser-webpack-plugin": "^5.1.4",
+    "terser-webpack-plugin": "^5.3.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
     "webpack-exclude-assets-plugin": "^0.1.1",
     "webpack-log": "^3.0.2",
     "webpack-merge-and-include-globally": "^2.3.4",
     "webpack-messages": "^2.0.4",
     "webpack-rtl-plugin": "^2.0.0",
     "worker-loader": "^3.0.8",
-    "yargs": "^17.0.1",
+    "yargs": "^17.3.1",
     "yarn-install": "^1.0.0"
   },
   "scripts": {
@@ -107,7 +106,6 @@
     "prod": "webpack --mode=production",
     "watch": "webpack --watch",
     "sync": "webpack --config ./webpack.sync.config.js",
-    "localhost": "node --max-old-space-size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --open",
     "ncu(devDependencies)": "ncu --dep dev"
   },
   "author": "Keenthemes",
