--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
+    "pg-native": "^3.0.0",
     "rate-limiter-flexible": "^2.3.6"
   },
   "devDependencies": {
@@ -59,5 +60,5 @@
     "webpack-cli": "^4.9.1",
     "webpack-node-externals": "^3.0.0"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.2.2"
 }
