--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "formidable": "v2",
     "helmet": "^4.6.0",
     "http-errors": "^2.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.2",
     "morgan": "~1.10.0",
     "mysql2": "^2.3.3",
@@ -41,22 +42,22 @@
     "rate-limiter-flexible": "^2.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/plugin-proposal-class-properties": "^7.16.5",
-    "@babel/plugin-transform-runtime": "^7.16.5",
-    "@babel/plugin-transform-strict-mode": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "babel-jest": "^27.4.5",
-    "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.2.0",
-    "eslint": "^8.5.0",
-    "jest": "^27.4.5",
-    "jest-config": "^27.4.5",
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/plugin-transform-strict-mode": "^7.18.6",
+    "@babel/preset-env": "^7.21.5",
+    "babel-jest": "^29.5.0",
+    "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.40.0",
+    "jest": "^29.5.0",
+    "jest-config": "^29.5.0",
     "merge-jsons-webpack-plugin": "^2.0.1",
-    "regenerator-runtime": "^0.13.9",
-    "terser-webpack-plugin": "^5.3.0",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
+    "regenerator-runtime": "^0.13.11",
+    "terser-webpack-plugin": "^5.3.8",
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.1.0",
     "webpack-node-externals": "^3.0.0"
   },
   "packageManager": "yarn@3.3.0"
