--- a/tools/package.json
+++ b/tools/package.json
@@ -47,10 +47,12 @@
     "jquery.repeater": "^1.2.1",
     "jszip": "^3.2.2",
     "line-awesome": "^1.3.0",
+    "lodash": "^4.17.21",
     "moment": "^2.24.0",
     "morris.js": "^0.5.0",
     "nouislider": "^14.1.1",
     "ol": "^7.4.0",
+    "ol-ext": "^4.0.9",
     "owl.carousel": "^2.2.0",
     "pace": "0.0.4",
     "pace-js": "^1.0.2",
